fixed alignment for icons in toolbar; added search input, completed color selection

--- a/src/app/modules/csv/csv-core/csv-core.component.css
+++ b/src/app/modules/csv/csv-core/csv-core.component.css
@@ -32,8 +32,6 @@
 }
 
 .csvButtonIcon {
-  margin-top: 3px;
-  vertical-align: unset;
   padding: 0 !important;
 }
 
